--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1,5 +1,25 @@
 @import url('https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap');
 
 body {
-    
+    background-color: rgb(181, 202, 241); 
+    font-family: Lexend Deca;
+    color: white;
+}
+
+
+h1 {
+    display: inline-block;
+    font-size: 34px;
+    margin-left: 10px;
+}
+ul {
+    display: inline-flex;
+    list-style-type: none;
+    display: flexbox;
+    flex-direction: row;
+}
+
+li {
+    margin-right: 2%; 
+
 }
