--- a/lib/css/home.css
+++ b/lib/css/home.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap');
 
 body {
-    background-image: linear-gradient(to right, #76ddb0, #1fc8db, #2cb5e8);
+    background-color: white;
     font-family: Lexend Deca;
     color: white;
+}
+div {
+    background-image: linear-gradient(to right, #76ddb0, #1fc8db, #2cb5e8);
+    padding-bottom: 30%; 
 }
 h1 {
     display: inline-block;
@@ -11,18 +15,37 @@ h1 {
     margin-left: 15px;
     margin-right: 215px;
 }
+@media (max-width: 1024px) {
+    h1 {
+        font-size: 150%;
+        padding-top: 3%;
+    }
+}
 ul {
     display: inline-flex;
     list-style-type: none;
     display: flexbox;
     flex-direction: row;
 }
-
+@media (max-width: 1024px) {
+    ul {
+        margin: auto;
+        text-align: center;
+        font-size: 150%;
+        display: block;
+        display: flex;
+        flex-direction: row;
+    }
+}
 li {
     margin-right: 13%; 
     font-size: 34px;
 }
-
+@media (max-width: 1024px){
+    li {
+        font-size: 115%;
+    }
+}
 ul li#homeprop:hover{
     /*color: rgb(199, 172, 23);*/
     background: -webkit-linear-gradient(purple, rgb(3, 79, 192));
@@ -44,11 +67,13 @@ ul li#aboutprop:hover{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
 p {
     text-align: center;
     background-color: white;
     height: 50%;
-    width: 100%;
+    width: 100;
     display: block;
     color: black;
 }
+
