--- a/lib/css/home.css
+++ b/lib/css/home.css
@@ -1,13 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap');
 
 body {
-    background-color: white;
+    background-color: rgb(44, 44, 44);
     font-family: Lexend Deca;
     color: white;
 }
 div {
-    background-image: linear-gradient(to right, #76ddb0, #1fc8db, #2cb5e8);
-    padding-bottom: 30%; 
+    background-image: linear-gradient(to right, #76ddb0, #1fc8db, #2cb5e8); 
 }
 h1 {
     display: inline-block;
@@ -67,17 +66,68 @@ ul li#aboutprop:hover{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-p.hh {
-    padding-top: 50%; 
+p.hh { 
     background-color: transparent;
-    font-size: 25px;
+    font-size: 27px;
+    display: block;
+    padding-bottom: 10%;
+    color: white;
 }
 p {
+    margin: auto;
     text-align: center;
-    background-color: white;
+    background-color: rgb(44, 44, 44);
     height: 50%;
     width: 100;
     display: block;
-    color: black;
+    color: #76ddb0;
+}
+img {
+    display: block;
+    margin: auto;
+    margin-top: 10%;
+    width: 33%;
+    height: 33%;
+    padding-bottom: 3%; 
+}
+h2 {
+    display: block;
+    margin-left: 4%;
+    margin-top: 4%;
+    color: white;
+    width: 36%;
+    height: 20%;
+    background-color: #2cb5e8;
+    text-align: center;
+    border-radius: 13px;
+    border: solid 3px #2cb5e8;
+    font-size: 150%;
+    
+}
+p.weInfo {
+    margin-top: 10%;
+    color: white; 
+    background-color: #2cb5e8;
+    font-size: 75%;
+    margin-bottom: 5%; 
+    padding-bottom: 10%;
+}
+h3 {
+    display: inline;
+}
+
+h4 {
+    display: inline;
+}
+h5 {
+    margin-top: 2%;
+    text-align: center;
+    color: #76ddb0;
+    font-size: 150%;
+    padding-bottom: 2%;
+}
+img.icon1 {
+    height: 10%;
+    width: 10%;
 }
 
