Mostly finished home

--- a/lib/css/home.css
+++ b/lib/css/home.css
@@ -1,18 +1,28 @@
 @import url('https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Beth+Ellen&display=swap');
 body {
     background-color: rgb(44, 44, 44);
     font-family: Lexend Deca;
     color: white;
 }
-div {
+div.header {
     background-image: linear-gradient(to right, #76ddb0, #1fc8db, #2cb5e8); 
 }
+
 h1 {
     display: inline-block;
     font-size: 34px;
     margin-left: 15px;
     margin-right: 215px;
+}
+@media (max-width: 568px) {
+    h1 {
+        display: block;
+        text-align: center;
+        margin: auto;
+        font-size: 150%;
+        padding-top: 3%;
+    }
 }
 @media (max-width: 1024px) {
     h1 {
@@ -25,6 +35,15 @@ ul {
     list-style-type: none;
     display: flexbox;
     flex-direction: row;
+}
+@media (max-width: 568px) {
+    ul {
+        margin: auto;
+        text-align: center;
+        display: block;
+        display: flex;
+        flex-direction: row;
+    }
 }
 @media (max-width: 1024px) {
     ul {
@@ -39,6 +58,11 @@ ul {
 li {
     margin-right: 13%; 
     font-size: 34px;
+}
+@media (max-width: 568px){
+    li {
+        font-size: 75%;
+    }
 }
 @media (max-width: 1024px){
     li {
@@ -66,12 +90,17 @@ ul li#aboutprop:hover{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-p.hh { 
+p.welcome { 
     background-color: transparent;
     font-size: 27px;
     display: block;
     padding-bottom: 10%;
     color: white;
+}
+@media (max-width: 568px){
+    p.welcome {
+        font-size: 115%;
+    }
 }
 p {
     margin: auto;
@@ -81,6 +110,11 @@ p {
     width: 100;
     display: block;
     color: #76ddb0;
+}
+@media (max-width: 568px){
+    p {
+        font-size: 115%;
+    }
 }
 img {
     display: block;
@@ -102,8 +136,19 @@ h2 {
     border-radius: 13px;
     border: solid 3px #2cb5e8;
     font-size: 150%;
-    
+    display: inline-flex;
 }
+h2.who_we_are {
+    flex-direction: column;
+}
+h2.unknown {
+    
+    flex-direction: column;
+    margin-left: 20%;
+    float: right;
+    margin-right: 4%;
+}
+
 p.weInfo {
     margin-top: 10%;
     color: white; 
@@ -112,10 +157,16 @@ p.weInfo {
     margin-bottom: 5%; 
     padding-bottom: 10%;
 }
-h3 {
-    display: inline;
-}
 
+p.unknown2 {
+    display: inline-block;
+    margin-top: 10%;
+    color: white; 
+    background-color: #2cb5e8;
+    font-size: 75%;
+    margin-bottom: 5%; 
+    padding-bottom: 10%;
+}
 h4 {
     display: inline;
 }
@@ -130,4 +181,17 @@ img.icon1 {
     height: 10%;
     width: 10%;
 }
-
+div.para {
+    background-color: rgb(44, 44, 44);
+}
+p.mission {
+    padding-bottom: 10%;
+}
+p.extra {
+    text-align: center;
+    margin: auto;
+    color: gold;
+    font-size: 150%;
+    font-family: Beth Ellen;
+    margin-bottom: 5%;
+}
