--- a/lib/css/internships.css
+++ b/lib/css/internships.css
@@ -1,3 +1,17 @@
 body {
-    background-color: black;
+    background-color: white;
+}
+div.header {
+    display: flex;
+    flex-direction: row;
+}
+ul {
+    display: flex;
+    flex-direction: row;
+}
+button {
+    margin-left: 4%;
+}
+li {
+    margin-right: 15%;
 }
