--- a/lib/css/internships.css
+++ b/lib/css/internships.css
@@ -12,6 +12,9 @@ div.header {
     padding-bottom: 2%; 
     padding-top: 2%;
 }
+h1 {
+    margin-left: 4%;
+}
 a {
     color: white;
 }
@@ -23,6 +26,8 @@ ul {
 }
 button {
     margin-left: 10%;
+    background-image: linear-gradient(#92095d, #db1672, #ee1a48d8);
+    color: white;
 }
 li {
     margin-right: 15%;
