--- a/lib/css/internships.css
+++ b/lib/css/internships.css
@@ -12,10 +12,23 @@ div.header {
     padding-bottom: 2%; 
     padding-top: 2%;
 }
+@media (max-width: 1024px) and (min-width: 569px) {
+    div.header {
+        
+    }
+}
 h1 {
     margin-left: 4%;
     margin-right: 28%;
     font-size: 200%;
+}
+@media (max-width: 568px) {
+    h1 {
+        font-size: 100%;
+        text-align: center;
+        display: block;
+        margin: auto;
+    }
 }
 a {
     color: white;
@@ -26,10 +39,30 @@ ul {
     list-style-type: none;
     font-size: 150%;
 }
+@media (max-width: 568px) {
+    ul {
+        margin: auto;
+        text-align: center;
+        display: block;
+        display: flex;
+        flex-direction: column;
+        padding-left: 8%; 
+        font-size: 100%;
+    }
+}
 button#Submitprop {
     margin-left: 10%;
     background-image: linear-gradient(#92095d, #db1672, #ee1a48d8);
     color: white;
+}
+@media (max-width: 568px) {
+    button#Submitprop {
+        font-size: 100%;
+        display: flex;
+        flex-direction: column;
+        width: 35%;
+        padding-right: 1%; 
+    }
 }
 li {
     margin-right: 15%;
@@ -51,8 +84,12 @@ button.normal {
     color: white;
     background-color: rgb(33, 92, 168);
     width: 8%;
-    margin-top: 1%;
+    margin-top: 2%;
     margin-left: 1%;
+}
+@media (max-width: 568px) {
+    button.normal {
+        width: 15%;
 }
 p.welcome {
     text-align: center;
